# PaddleCustomDevice

./: .gitmodules
backends/opencl_free/: CMakeLists.txt  setup.py.in
backends/opencl_free/OpenCLDNN/: CMakeLists.txt
backends/opencl_free/OpenCLDNN/include/: opencldnn.h  opencldnn_common.h  opencldnn_macro.h
backends/opencl_free/OpenCLDNN/source/: CMakeLists.txt  opencldnn.cpp
backends/opencl_free/cmake/: opencldnn.cmake
backends/opencl_free/runtime/: runtime.cc  runtime.h
